deploy-app01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-01-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-01
  template:
    metadata:
      labels:
        app: app-01
    spec:
      containers:
        - name: app-01
          image: brdcookies6969/app-fe-01:latest
