svc-app01-cluterip.yml
apiVersion: v1
kind: Service
metadata:
  name: app-01-svc-cl
spec:
  type: ClusterIP
  selector:
    app: app-01
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
