svc-app01.yml
apiVersion: v1
kind: Service
metadata:
  name: app-01-svc
spec:
  type: NodePort
  selector:
    app: app-01 
  ports:
    - name: http
      nodePort: 30080 
      protocol: TCP
      port: 1234 
      targetPort: 5000
