ing-app-01-v1.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: app-01-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app-01-svc-cl
          servicePort: 2345
