ing-app-01.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-01-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app-01-svc-cl
          servicePort: 2345
